package ar.edu.utn.frba.dds.modelos.calculo_grado_confianza;

public interface AdapterCalculoGradoConfianza {
  ResultadoConfianza calcular(ParametroConfianza parametro);
}
